# Habla

./: .gitignore  01-habla-v1-overview.md  02-wire-format.md  03-command-keys.md  04-operation-profiles.md  05-examples.md  06-conformance.md  CMakeLists.txt  LICENSE  Package.swift  README.md
.build/: build.db  debug.yaml  plugin-tools.yaml
.build/arm64-apple-macosx/debug/: HablaExample  plugin-tools-description.json
.build/arm64-apple-macosx/debug/Habla.build/: CommandKeys.swiftdeps  Habla.swiftdeps  HablaPrettyCatalog.swiftdeps  master.priors  output-file-map.json  resource_bundle_accessor.swiftdeps  sources
.build/arm64-apple-macosx/debug/Habla.build/DerivedSources/: resource_bundle_accessor.swift
.build/arm64-apple-macosx/debug/Habla.build/include/: Habla-Swift.h  module.modulemap
.build/arm64-apple-macosx/debug/HablaC.build/: module.modulemap
.build/arm64-apple-macosx/debug/HablaExample.build/: main.swiftdeps  master.priors  output-file-map.json  sources
.build/arm64-apple-macosx/debug/HablaExample.product/: Objects.LinkFileList
.build/arm64-apple-macosx/debug/Habla_Habla.bundle/: Localizable.xcstrings
.build/arm64-apple-macosx/debug/ModuleCache/1032RIX0VEJ1T/: CFNetwork-1PNPO1ORVQZLS.pcm  CoreFoundation-16SA8WK3L6MQN.pcm  DiskArbitration-3LBJF5I58QD8.pcm  Dispatch-R76HXUP80TVL.pcm  HablaC-3BQVRY0FRCX3D.pcm  MachO-20RPYVQSX341K.pcm  ObjectiveC-1G8H182PQX3QE.pcm  (+23 more)
Sources/Habla/: CommandKeys.swift  Habla.swift  HablaPrettyCatalog.swift
Sources/HablaC/: habla.c
Sources/HablaC/include/: habla.h
Sources/HablaExample/: main.swift
(+133 files in other folders)
